# supercherry-ai

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
ai/: CODE_REVIEW_GUIDE.md  CODE_STYLE.md  COMMIT_CONVENTION.md  GIT_WORKFLOW.md  README.md  RELEASE_PROCESS.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
backend/app/: config.py  main.py
backend/app/api/: auth.py  balance.py  dependencies.py  kis_test.py  market.py  news.py  order.py  strategy.py  system.py  trading_account.py
backend/app/models/: __init__.py  balance.py  kis_token.py  order.py  strategy.py  trading_account.py  user.py
backend/app/schemas/: __init__.py  balance.py  order.py  strategy.py  trading_account.py  user.py
backend/app/services/: auth_service.py  kis_api.py  vwap_strategy.py
backend/app/utils/: auth.py
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  package.json
frontend/src/: App.jsx
frontend/src/components/: Layout.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Balance.jsx  Dashboard.jsx  Data.jsx  Login.jsx  Market.jsx  News.jsx  Order.jsx  Settings.jsx  System.jsx
frontend/src/services/: api.js  auth.js  balance.js  market.js  order.js  tradingAccount.js
scripts/: create-test-user.py  create-test-user.sh  dev-start.sh  dev-stop.sh  logs.sh  restart.sh  start.sh  stop.sh  test-kis-api-simple.py  test-kis-api.py
